--- a/main.tex
+++ b/main.tex
@@ -6,8 +6,11 @@
 
 %\input{content.tex}
 
+\input{title.tex}
+\input{authors.tex}
 %\input{intro.tex}
 %\input{functional_structure.tex}
+\input{functional_structure_update.tex}
 %\input{information_support.tex}
 %\input{mathematical_support.tex}
 %\input{software_support.tex}
